...
                                <color key="textColor" name="backgroundColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms of Service" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Wj-87-kGN">
                                <rect key="frame" x="5" y="5" width="365" height="29"/>
                                <accessibility key="accessibilityConfiguration" label="termsOfService"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <color key="textColor" name="backgroundColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Sy-1O-knc">
                                <rect key="frame" x="10" y="621" width="355" height="36"/>
                                <color key="backgroundColor" name="colorOne"/>
                                <accessibility key="accessibilityConfiguration" label="doneBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="3kt-X4-10L"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" name="backgroundColor"/>
...
