...
                                    <constraint firstAttribute="width" constant="2" id="rHh-ZG-iu2"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIb-TV-d7q">
                                <rect key="frame" x="186.5" y="578" width="188.5" height="40"/>
                                <color key="backgroundColor" name="colorOne"/>
                                <accessibility key="accessibilityConfiguration" label="everyoneBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="fOv-bA-sIw"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="18"/>
                                <state key="normal" title="everyone">
                                    <color key="titleColor" red="0.16078431369999999" green="0.16862745100000001" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
